--- a/templates/band/_form.html.twig
+++ b/templates/band/_form.html.twig
@@ -1,4 +1,17 @@
 {{ form_start(form) }}
+<div class="container bg-white">
+    <div class="row">
+        <div class="col-6 mb-5">
+            {{ form_row(form.name, {'label': 'Nom', 'attr': {'class': 'form-control'}}) }}
+        </div>
+        <div class="col-6 mb-5">
+            {{ form_row(form.bio, {'label': 'Biografia', 'attr': {'class': 'form-control'}}) }}
+        </div>
+        <div class="col-6">
+            {{ form_row(form.photoFile, {'label': 'Imatge', 'attr': {'class': 'form-control'}}) }}
+        </div>
+    </div>
+</div>
     {{ form_widget(form) }}
     <button class="btn">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
