--- a/templates/band/index.html.twig
+++ b/templates/band/index.html.twig
@@ -3,35 +3,55 @@
 {% block title %}Bandes{% endblock %}
 
 {% block body %}
-    <h1>Llista de bandes</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Nom</th>
-                <th>Biografia</th>
-                <th>accions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for band in bands %}
-            <tr>
-                <td>{{ band.id }}</td>
-                <td>{{ band.name }}</td>
-                <td>{{ band.bio }}</td>
-                <td>
+    <div class="container d-flex justify-content-center py-5">
+        <div class="row">
+            <div class="col-12">
+                <h2 class="fs-5 border-3 border-bottom border-info-subtle">Llista de bandes</h2>
+            </div>
+        </div>
+    </div>
+
+    <div class="d-flex justify-content-center">
+        <button class="btn btn-warning mb-5"><a href="{{ path('app_band_new') }}"
+                                                class="link-underline link-underline-opacity-0 text-white">Crear
+                banda</a></button>
+    </div>
+
+    <div class="container d-flex justify-content-center text-center">
+        <div class="row">
+            <div class="col-12">
+                <table class="table">
+                    <thead>
+                    <tr class="table-danger border border-dark-subtle">
+                        <th>Id</th>
+                        <th>Nom</th>
+                        <th>Biografia</th>
+                        <th>Imatge</th>
+                        <!--<th>accions</th>-->
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for band in bands %}
+                        <tr>
+                            <td>{{ band.id }}</td>
+                            <td>{{ band.name }}</td>
+                            <td>{{ band.bio }}</td>
+                            <td>{{ band.photo }}</td>
+                            <!--<td>
                     <a href="{{ path('app_band_show', {'id': band.id}) }}">Mostrar</a>
                     <a href="{{ path('app_band_edit', {'id': band.id}) }}">Editar</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="4">No s'ha res</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+                </td>-->
+                        </tr>
+                    {% else %}
+                        <tr>
+                            <td colspan="4">No s'ha res</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
-    <a href="{{ path('app_band_new') }}">Crear banda nova</a>
 {% endblock %}
